fixed ref in builders

--- a/builders.tex
+++ b/builders.tex
@@ -5,7 +5,7 @@
 
 % Primera etapa
 \section{Ejemplo Motivador}
-
+\label{sec:motivacionBuilders}
 \begin{table}[]
 \centering
 {\scriptsize
@@ -290,7 +290,7 @@ rápido y suficientemente bueno para descartar muchos métodos para nuestros
 algoritmos}  
 
 \cacho{Es nuevo}
-En el ejemplo motivador presentado en la Sección~\ref{sec:motivacion} y en la Tabla~\ref{tab:ncl-api}, se puede observar que existen numerosos métodos clasificados como observadores. 
+En el ejemplo motivador presentado en la Sección~\ref{sec:motivacionBuilders} y en la Tabla~\ref{tab:ncl-api}, se puede observar que existen numerosos métodos clasificados como observadores. 
 Antes de ejecutar cualquiera de nuestros algoritmos, resulta fundamental identificar este tipo de métodos, ya que no contribuyen a la construcción de nuevos objetos: no modifican el estado del sistema ni crean nuevas instancias útiles para el objetivo. 
 Por lo tanto, no tienen ninguna utilidad en el contexto de los algoritmos de búsqueda de métodos generadores de objetos, y pueden descartarse de forma segura.
 
